--- a/src/main/webapp/css/implant/boneGraftImplant.css
+++ b/src/main/webapp/css/implant/boneGraftImplant.css
@@ -114,525 +114,6 @@
 }
 
 .section03 ul {
-    padding-top: 47px;
-    box-sizing: border-box;
-}
-
-.section03 .image_box_left {
-    width: 790px;
-    height: 374px;
-    position: relative;
-    margin: 0 auto;
-}
-
-.section03 .img {
-    background: url(../../images/sub/implant/bone/bone04.png) no-repeat center;
-    margin-top: 20px;
-}
-
-.section03 .max-layout-width {
-    position: relative;
-}
-
-.section03 .text ul {
-    overflow: hidden;
-    width: 1000px;
-    margin: 0 auto;
-}
-
-.section03 .text li {
-    /* padding-left: 117px; */
-    box-sizing: border-box;
-    float: left;
-    width: 25%;
-    position: relative;
-}
-
-.section03 .text li p {
-    line-height: 1.6;
-    color: #fff;
-    letter-spacing: -1.3px;
-    font-size: 17px;
-    padding-top: 120px;
-    position: relative;
-}
-
-.section03 .text li p:before {
-    position: absolute;
-    width: 140px;
-    height: 140px;
-    content: '';
-    display: block;
-    border: 1px solid #fff;
-    border-radius: 100%;
-    top: -43px;
-    left: 54px;
-    display: none;
-}
-
-
-.section03 .text .img01 {
-    background: url(../../images/sub/implant/bone/bone_icon01.png) no-repeat center top;
-    padding-top: 27px;
-    padding-bottom: 26px;
-    margin-bottom: 40px;
-}
-
-.section03 .text .img02 {
-    background: url(../../images/sub/implant/bone/bone_icon02.png) no-repeat center top;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    margin-bottom: 39px;
-    background-position-y: 8px;
-}
-
-.section03 .text .img03 {
-    background: url(../../images/sub/implant/bone/bone_icon03.png) no-repeat center top;
-    padding-top: 20px;
-    padding-bottom: 27px;
-}
-
-.section03 .text .img04 {
-    background: url(../../images/sub/implant/bone/bone_icon04.png) no-repeat center top;
-    padding-top: 20px;
-    padding-bottom: 27px;
-}
-
-.section05 {
-    margin-top: 101px;
-}
-
-.section05 .max-layout-width .text {
-    padding-right: 50%;
-}
-
-.section05 .max-layout-width .text > div {
-    padding-right: 70px;
-    position: relative;
-}
-
-.section05 .image_box_right {
-    max-width: 1276px;
-    height: 504px;
-    width: 50%;
-    z-index: 10;
-}
-
-.section05 .image_box_right .img {
-    background: url(../../images/sub/implant/bone/bone08.jpg) no-repeat center;
-}
-
-.section05 .section-title {
-    padding-top: 77px;
-    position: relative;
-    line-height: 1.25;
-    margin-bottom: 99px;
-    letter-spacing: -1px;
-    padding-left: 80px;
-    letter-spacing: -2.3px;
-}
-
-.section05 .max-layout-width .text > div:before {
-    background: url(../../images/sub/implant/digital/marks.png);
-    content: '';
-    width: 156px;
-    height: 134px;
-    position: absolute;
-    top: 0;
-}
-
-.section05 .section-text {
-    word-break: keep-all;
-    line-height: 1.6;
-    position: relative;
-    text-align: right;
-}
-
-.section05 .section-text:before {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 69px;
-    background: #7f6a57;
-    top: -84px;
-    right: 0;
-}
-
-.section05 .bg {
-    background: #f5f5f5;
-    width: 64.65%;
-    position: absolute;
-    height: 232px;
-    left: 0px;
-    bottom: -66px;
-}
-
-.section05 .max-layout-width {
-    position: relative;
-    z-index: 10;
-}
-
-.section08 {
-    margin-top: 136px;
-    text-align: center;
-    margin-bottom: 93px;
-}
-
-.section08 .section-title {
-    line-height: 1.3
-}
-
-.section08 ul {
-    margin-top: 47px;
-    margin-left: -3.07%;
-    overflow: hidden;
-}
-
-.section08 ul li {
-    width: 46.93%;
-    float: left;
-    margin-left: 3.07%;
-    padding-top: 344px;
-}
-
-.section08 ul li:first-child {
-    background: url(../../images/sub/implant/digital/digital20.jpg) no-repeat top center;
-}
-
-.section08 ul li.last-img {
-    background: url(../../images/sub/implant/digital/digital21.jpg) no-repeat top center;
-}
-
-.section08 ul li p {
-    height: 77px;
-    background: #9b8b7e;
-    padding-left: 42px;
-    padding-right: 35px;
-    text-align: left;
-    position: relative;
-}
-
-.section08 ul li p span:first-child {
-    padding-top: 26px;
-    display: block;
-    font-size: 23px;
-    color: #fff;
-    font-weight: bold;
-}
-
-.section08 ul li p span.view {
-    position: absolute;
-    right: 78px;
-    top: 4px;
-    font-size: 19px;
-    color: #fff;
-    letter-spacing: 1px;
-}
-
-.section08 ul li p span.view:after {
-    background: url(../../images/sub/implant/digital/digital_arrow.png) no-repeat top center;
-    content: '';
-    position: absolute;
-    right: -47px;
-    width: 33px;
-    height: 17px;
-    bottom: 0;
-}
-
-.section04 {
-    margin-top: 142px;
-}
-
-.section04 h2 {
-    text-align: center;
-    font-size: 35px;
-    margin-bottom: 56px;
-    letter-spacing: -2px;
-}
-
-.section04 ul {
-    overflow: hidden;
-    margin-left: -10%;
-    display: block;
-    width: auto;
-}
-
-.section04 li {
-    width: 22.333333%;
-    margin-left: 10%;
-    float: left;
-    text-align: center;
-    padding-top: 278px;
-    position: relative;
-}
-
-.section04 .img01 {
-    background: url(../../images/sub/implant/bone/bone05.jpg) no-repeat top center;
-}
-
-.section04 .img01:before, .section04 .img02:before {
-    content: '';
-    position:absolute;
-    background: url(../../images/sub/implant/bone/right_icon02.jpg) no-repeat top center;
-    width: 17px;
-    height: 29px;
-    right: -84px;
-    top: 125px;
-}
-
-.section04 .img02 {
-    background: url(../../images/sub/implant/bone/bone06.jpg) no-repeat top center;
-}
-
-.section04 .img03 {
-    background: url(../../images/sub/implant/bone/bone07.jpg) no-repeat top center;
-}
-
-.section04 li h5 {
-    padding: 32px 0 19px 0;
-    font-size: 33px;
-    color: #222;
-    /* font-weight: bold; */
-    letter-spacing: 1px;
-    font-family: anton !important;
-    padding-top: 55px;
-}
-
-.section04 li p {
-    line-height: 1.45;
-    font-size: 16px;
-    letter-spacing: -1px;
-}
-
-
-section.board-link {
-    margin-top: 126px;
-}
-
-.treatment-case {
-    margin-top: 150px;
-}
-
-
-.text-slider {
-    margin-top: 207px;
-    /* padding-bottom: 34px; */
-}
-
-.text-slider .section-text {
-    margin-bottom: 45px;
-    color: #9c9c9c;
-}
-
-
-.text-slider .slick-slide .text p {
-    line-height: 1.6;
-    width: 324px;
-    word-break: keep-all;
-    letter-spacing:-1px;
-}
-
-.text-slider .slick-slide .text h2 {
-    font-size: 31px;
-    line-height: 1.35;
-    margin-bottom: 55px;
-    color: #222;
-    letter-spacing: -1.5px;
-}
-
-.mobile-text {
-    display: none;
-}
-
-.text-slider .section-title {
-    line-height: 1.25;
-}
-
-.section-text {
-    padding-top: 15px;
-}
-
-section.board-link {
-    margin-top: 125px;
-}
-
-.board-link {
-    margin-bottom: 127px;
-}
-
-
-.section-text {
-
-    padding-top: 12px;
-}
-
-.board-link .section-title {
-    line-height: 1.25;
-}
-
-@media screen and (max-width: 1000px) {
-    html body section.img-four .text ul {
-        width: 100%;
-    }
-    .section03 .text li p:before {
-        width: 70%;
-        height: 70%;
-        left: 28px;
-        top: -33px;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .section04 .img01:before, .section04 .img02:before {
-        display: none;
-    }
-    .section03 .image_box_left {
-        width: 100%;
-        padding: 0 30px;
-        box-sizing: border-box;
-    }
-    .section03 .text ul {
-        width: 100%;
-    }
-    .section04 ul {
-        margin-left: 0;
-    }
-    .section04 li {
-        width: 100%;
-        margin-left: 0;
-        margin-bottom: 50px;
-    }
-}
-
-@media screen and (max-width: 640px) {
-    .section03 {
-        background-size: cover;
-    }
-    .section03 .text h2 {
-        width: 300px;
-        margin: 0 auto;
-        line-height: 1.3;
-        word-break: keep-all;
-    }
-    .section04 h2 {
-        font-size: 30px;
-    }
-}.section01 {
-     margin-top: 107px;
- }
-
-.section01 .text, .section01 .bg .max-layout-width {
-    padding-left: 50%;
-}
-
-.section01 .text > div, .section01 .bg .max-layout-width > div {
-    padding-left: 73px;
-}
-
-.section01 .bg .max-layout-width > div {
-    width: 570px;
-    word-break: keep-all;
-}
-
-.section01 .section-title {
-    line-height: 1.25;
-}
-
-.section01 .bg {
-    margin-top: 42px;
-    background: #f5f5f5;
-    padding-top: 22px;
-    padding-bottom: 176px;
-}
-
-.section01 .section-text {
-    line-height: 1.6;
-}
-
-.section01 .section-text:first-child {
-    margin-bottom: 9px;
-}
-
-.section01 .image_box_left {
-    width: 50%;
-    max-width: 1276px;
-    height: 552px;
-    top: -67px;
-}
-
-.section01 .img {
-    background: url(../../images/sub/implant/bone/bone01.jpg) no-repeat center;
-}
-
-.section02 {
-    margin-top: 118px;
-    margin-bottom: 115px;
-}
-
-.section02 .section-title {
-    line-height: 1.25;
-    /* letter-spacing: -2px; */
-    padding-top: 46px;
-}
-
-.section02 .section-text {
-    width: 590px;
-    word-break: keep-all;
-    line-height: 1.6;
-    margin-top: 16px;
-}
-
-.section02 .max-layout-width {
-    overflow: hidden;
-}
-
-.section02 .max-layout-width > div, .section02 .max-layout-width ul {
-    width: 50%;
-    float: left;
-}
-
-.section02 .max-layout-width ul {
-    display: inline-block
-}
-
-.section02 .img {
-    width: 315px;
-    height: 343px;
-    float: left;
-}
-
-.section02 .img01 {
-    background: url(../../images/sub/implant/bone/bone02.jpg) no-repeat center;
-    margin-right: 20px;
-}
-
-
-.section02 .img02 {
-    background: url(../../images/sub/implant/bone/bone03.jpg) no-repeat center;
-}
-
-.section03 {
-    background: url(../../images/sub/implant/bone/bone_bg.jpg) no-repeat center;
-    padding-bottom: 0px;
-}
-
-.section03 .image_box_left + .text {
-    padding-top: 0px;
-}
-
-.section03 .text {
-    padding-top: 86px;
-    text-align: center;
-}
-
-.section03 .text h2 {
-    font-size: 34px;
-    color: #fff;
-    font-weight: 500;
-    letter-spacing: -2px;
-}
-
-.section03 ul {
     padding-top: 19px;
     box-sizing: border-box;
 }
@@ -689,30 +170,65 @@ section.board-link {
     display: none;
 }
 
+.section03 .text {
+    position: relative;
+}
+
+.section03 .text li {
+    position:relative;
+}
+
+.section03 .text li:before {
+    position: absolute;
+    content: '';
+    width: 153px;
+    height: 153px;
+    left: 50%;
+    top: 0;
+
+    background-size: contain !important;
+}
+
+.section03 .text .img01:before {
+    background: url(../../images/sub/implant/bone/bone_icon01.png) no-repeat center top;
+    margin-left: -76px;
+}
+.section03 .text .img02:before {
+    background: url(../../images/sub/implant/bone/bone_icon02.png) no-repeat center top;
+    margin-left: -76px;
+}
+.section03 .text .img03:before {
+    background: url(../../images/sub/implant/bone/bone_icon03.png) no-repeat center top;
+    margin-left: -76px;
+}
+.section03 .text .img04:before {
+    background: url(../../images/sub/implant/bone/bone_icon04.png) no-repeat center top;
+    margin-left: -76px;
+}
 
 .section03 .text .img01 {
-    background: url(../../images/sub/implant/bone/bone_icon01.png) no-repeat center top;
+
     padding-top: 27px;
     padding-bottom: 26px;
     margin-bottom: 40px;
 }
 
 .section03 .text .img02 {
-    background: url(../../images/sub/implant/bone/bone_icon02.png) no-repeat center top;
+
     padding-top: 27px;
     padding-bottom: 27px;
     margin-bottom: 39px;
-    background-position-y: 8px;
+    /* background-position-y: 8px; */
 }
 
 .section03 .text .img03 {
-    background: url(../../images/sub/implant/bone/bone_icon03.png) no-repeat center top;
+
     padding-top: 20px;
     padding-bottom: 27px;
 }
 
 .section03 .text .img04 {
-    background: url(../../images/sub/implant/bone/bone_icon04.png) no-repeat center top;
+
     padding-top: 20px;
     padding-bottom: 27px;
 }
