--- a/src/main/webapp/css/info/directions.css
+++ b/src/main/webapp/css/info/directions.css
@@ -65,10 +65,6 @@
     height: 613px;
 }
 
-.section03 .background {
-    background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
-}
-
 .section03 .bg {
     width: 100%;
     height: 100%;
@@ -77,6 +73,7 @@
     text-align: center;
     z-index: 1000000000;
     position: relative;
+    background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
 }
 
 .section03 .bg h2 {
@@ -234,10 +231,14 @@ li:before {
 }
 
 @media screen and (max-width: 640px) {
+    .section03 .bg {
+        background-attachment: inherit;
+        background-size: cover;
+    }
 
     .section04 li p {
-    font-size: 14px;
-}
+        font-size: 14px;
+    }
 
 
     #map {
@@ -283,11 +284,13 @@ li:before {
 
 
     .section04 {
+        padding-top: 59px;
         padding-top: 51px;
         padding-bottom: 52px;
     }
 
     .section04 li h2 {
+        font-size: 24px;
         font-size: 23px;
         font-weight: 500;
         margin-bottom: 17px;
@@ -306,13 +309,14 @@ li:before {
         width: 90%;
     }
     .section04 li {
-    width: 100%;
-    border: none;
-    border-top: 1px solid #d4d4d4;
-    height: 211px;
-    padding-top: 33px;
-    margin-bottom: 0px;
+        width: 100%;
+        border: none;
+        border-top: 1px solid #d4d4d4;
+        height: 211px;
+        padding-top: 33px;
+        margin-bottom: 0px;
+    }
 }
-}
+
 
 
