--- a/src/main/webapp/css/tooth/scaling.css
+++ b/src/main/webapp/css/tooth/scaling.css
@@ -557,6 +557,10 @@
 
 
 @media screen and (max-width: 640px) {
+    .section05 .bg {
+        background-attachment: initial;
+        background-size: cover;
+    }
     .section08 {
         margin-top: 0;
     }
