--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -478,6 +478,17 @@ strong {
     padding-left: 20px;
     box-sizing: border-box;
     color: #fff;
+    position: relative;
+}
+.treatment-case .left-img1 div.login span:before {
+    content: '';
+    background: url(../images/cmmn/case_arrow.png);
+    width: 30px;
+    height: 8px;
+    display: block;
+    position: absolute;
+    right: 10px;
+    top: 14px;
 }
 
 .treatment-case .right-img1 {
