--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -833,7 +833,7 @@ section.board-link ul li {
     section.list-content .image_box_left {
         width: 93%;
         height: 294px;
-        top: 275px;
+        top: 308px;
         left: 3.5%;
     }
 }
@@ -1187,6 +1187,7 @@ section.board-link ul li {
     }
     section.list-content .section-text, section.list-content .pager {
         font-size: 14px;
+        line-height: 1.5;
     }
     section.list-content .section-text + .pager {
         margin-top: 350px;
