--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -27,7 +27,7 @@
 }
 
 .section01 .section-text {
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .section01 .section-text:first-child {
@@ -90,7 +90,7 @@
 
 .section03 .section-text {
     word-break: keep-all;
-    line-height: 1.6;
+    line-height: 1.5;
     position: relative;
     text-align: right;
 }
@@ -133,7 +133,7 @@
 .section04 .section-text {
     width: 590px;
     word-break: keep-all;
-    line-height: 1.6;
+    line-height: 1.5;
     margin-top: 12px;
 }
 
@@ -243,37 +243,35 @@
     background: url(../../images/sub/implant/oneday/oneday_icon01.png) no-repeat center top;
     left: 50%;
     top: 0;
-
 }
 
 .section05 .text .img01:before {
     background: url(../../images/sub/implant/oneday/oneday_icon01.png) no-repeat center top;
     margin-left: -76px;
+    background-size: contain;
 }
 
 
 .section05 .text .img02:before {
     background: url(../../images/sub/implant/oneday/oneday_icon02.png) no-repeat center top;
     margin-left: -76px;
+    background-size: contain;
 }
 
 
 .section05 .text .img03:before {
     background: url(../../images/sub/implant/oneday/oneday_icon03.png) no-repeat center top;
     margin-left: -76px;
+    background-size: contain;
 }
 
 
 .section05 .text .img04:before {
     background: url(../../images/sub/implant/oneday/oneday_icon04.png) no-repeat center top;
     margin-left: -76px;
+    background-size: contain;
 }
-.section05 .text .img01 {
-
-    padding-top: 27px;
-    padding-bottom: 27px;
-    /* margin-bottom: 40px; */
-}
+.section05 .text .img01 {padding-top: 27px;padding-bottom: 27px;/* margin-bottom: 40px; */}
 
 .section05 .text .img02 {
 
@@ -513,8 +511,8 @@ body .section02 li:first-child {
 .section02 .arrow p:first-child:before {
     background: url(../../images/sub/implant/oneday/oneday_arrow01.png) no-repeat center;
     position: absolute;
-    width: 100px;
-    height: 50px;
+    width: 230px;
+    height: 61px;
     content: '';
     left: 0;
 }
@@ -672,7 +670,7 @@ section.board-link {
         line-height: 1.3;
         word-break: keep-all;
         padding: 0 100px;
-        margin-bottom: 30px;
+        margin-bottom: 11px;
     }
     .section02 .long-arrow p:first-child {
         background-size: contain;
@@ -696,6 +694,19 @@ section.board-link {
 }
 
 @media screen and (max-width: 640px) {
+    .section05 .text li:before {
+    position: absolute;
+    content: '';
+    width: 140px;
+    height: 140px;
+    background: url(../../images/sub/implant/oneday/oneday_icon01.png) no-repeat center top;
+    left: 50%;
+    top: 0;
+}
+
+    section.section-top-title-right-two {
+    padding-bottom: 98px;
+}
 
     section.board-link {
         margin-top: 50px;
@@ -725,7 +736,7 @@ section.board-link {
     }
 
     .section03 {
-        margin-top: 67px;
+        margin-top: 65px;
     }
 
     .section02 .oneday li:first-child, .section02 .basic li:first-child {
@@ -833,10 +844,10 @@ section.board-link {
         word-break: keep-all;
     }
     .section04 {
-        margin-top: 87px;
+        margin-top: 45px;
     }
     .section02 .step {
-        margin-top: 0px;
+        margin-top: 15px;
     }
     .section02 .section-title, .section04 .section-title {
         font-size: 28px;
@@ -845,7 +856,7 @@ section.board-link {
         font-size: 25px;
     }
     section.section-top-title-right-two .max-layout-width ul {
-        top: 350px;
+        top: 329px;
     }
     .section07 p {
         font-size: 14px;
