--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -896,7 +896,7 @@ section.board-link ul li {
     section.section-quotes-title-right .section-title {
         padding-left: 130px;
         padding-top: 66px;
-        margin-bottom: 65px;
+        margin-bottom: 63px;
     }
     section.section-quotes-title-right .image_box_right {
         width: 100%;
@@ -915,7 +915,7 @@ section.board-link ul li {
     }
     body section.section-top-title-left-two .max-layout-width ul {
         width: 100%;
-        margin-top: 30px;
+        margin-top: 24px;
         padding: 0 30px;
         box-sizing: border-box;
     }
@@ -951,7 +951,7 @@ section.board-link ul li {
     }
     section.section-top-title-left .bg {
         margin-top: 0;
-        padding-top: 10px;
+        padding-top: 1px;
     }
 
     section.section-top-title-left {
@@ -1026,16 +1026,19 @@ section.board-link ul li {
     .board-link ul li:first-child:before {
         background: url(../images/sub/implant/digital/digital20.jpg) no-repeat top center;
         height: 200px;
+        background-size: cover;
     }
 
     .board-link ul li.center-img:before {
         background: url(../images/sub/implant/digital/digital21.jpg) no-repeat top center;
         height: 200px;
+        background-size: cover;
     }
 
     .board-link ul li.last-img:before {
         background: url(../images/sub/implant/digital/digital22.jpg) no-repeat top center;
         height: 200px;
+        background-size: cover;
     }
 
 
@@ -1103,7 +1106,7 @@ section.board-link ul li {
     }
     .section-text {
         font-size: 14px;
-        margin-bottom: 26px;
+        /* margin-bottom: 26px; */
         margin-top: 12px;
     }
     .board-link .section-title {
@@ -1381,16 +1384,27 @@ section.board-link ul li {
     section.section-top-title-left {
         padding-bottom: 39px;
     }
-section.section-quotes-title-right .bg {
-    height: 166px;
+
 }
 
 @media screen and (max-width: 360px) {
+        section.section-quotes-title-right .section-text {
+        text-align: left;
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+        padding-bottom:12px;
+    }
+    section.section-quotes-title-right .section-title {
+    padding-left: 82px;
+    padding-top: 66px;
+    margin-bottom: 50px;
+    }
     section.section-top-title-left {
-        padding-bottom: 180px;
+    padding-bottom: 45px;
     }
     section.list-content .image_box_left {
-        top: 350px;
+        top: 285px;
     }
     section.section-quotes-title-right .bg {
         bottom: -15px;
