--- a/src/main/webapp/css/implant/boneGraftImplant.css
+++ b/src/main/webapp/css/implant/boneGraftImplant.css
@@ -27,7 +27,7 @@
 }
 
 .section01 .section-text {
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .section01 .section-text:first-child {
@@ -59,7 +59,7 @@
 .section02 .section-text {
     width: 590px;
     word-break: keep-all;
-    line-height: 1.6;
+    line-height: 1.5;
     margin-top: 16px;
 }
 
@@ -255,6 +255,7 @@
 
 .section05 .image_box_right .img {
     background: url(../../images/sub/implant/bone/bone08.jpg) no-repeat center;
+    background-size: cover !important;
 }
 
 .section05 .section-title {
@@ -533,33 +534,116 @@ section.board-link {
         margin-left: 0;
     }
     .section04 li {
-        width: 100%;
+        width: 33.3%;
         margin-left: 0;
         margin-bottom: 50px;
+        padding-top: 86px;
     }
 }
 
 @media screen and (max-width: 640px) {
+    section.board-link {
+    margin-top: 53px;
+}
+    body .section-top-title-left .section-title {
+    font-size: 25px;
+    }
+    .text-slider .slider-arrow-container {
+    bottom: 295px;
+    }
+    section.text-slider .slick-slide .text p {
+     font-size:14px;
+     padding-top:15px;
+     line-height:1.4;
+     max-width: 326px;
+    }
+    .text-slider .section-text {
+    font-size: 14px;
+    margin-top: 16px;
+    line-height: 1.5;
+    margin-bottom: 33px;
+    }
+    .text-slider .section-title {
+    font-size: 28px;
+    }
+    section.section-quotes-title-right .image_box_right {
+    width: 100%;
+    height: 225px;
+    background-size: cover;
+    }
+    .treatment-case {
+    margin-top: 50px;
+    }
+    lider .slick-slide .text p {
+    max-width: 340px;
+    font-size: 14px;
+    line-height: 1.5;
+    padding-top: 10px;
+    }
+    .text-slider .slick-slide .text h3 {
+    font-size: 55px;
+    margin-top: -21px;
+    }
+    .text-slider .slick-slide .text h2 {
+    font-size:25px;
+    /* margin-bottom: 55px; */
+    }
+
+    .section05 {
+    margin-top: 12px;
+    }
+    .section04 li h5 {
+    font-size: 28px;
+    }
+    .section04 {
+    margin-top: 65px;
+    }
+    .section03 .text li p {
+    padding-top: 125px;
+    }
+    .section03 .image_box_left + .text {
+    padding-top: 0px;
+    margin-top: -25px;
+    }
+    .section03 .text {
+    padding-top: 55px;
+    text-align: center;
+    }
     .section03 {
         background-size: cover;
+        padding-bottom: 39px;
     }
     .section03 .text h2 {
         width: 300px;
         margin: 0 auto;
         line-height: 1.3;
         word-break: keep-all;
+        font-size: 28px;
     }
     .section04 h2 {
-        font-size: 30px;
+        font-size: 28px;
+        margin-bottom: 34px;
     }
 }
 
 @media screen and (max-width: 414px) {
+        .section04 li p {
+    line-height: 1.4;
+    font-size: 13px;
+    letter-spacing: -1px;
+}
+     .section03 .text li p {
+    padding-top: 125px;
+}
+    .section03 .image_box_left + .text {
+    padding-top: 0px;
+    margin-top: -25px;
+}
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 140px;
+        padding-top: 240px;
     }
     section.section-quotes-title-right .bg {
-        height: 208px;
+        height: 201px;
     }
     .section05 .max-layout-width .text > div {
         padding-right: 20px;
@@ -576,18 +660,40 @@ section.board-link {
     }
     .section03 .img {
         background-size: contain;
-        height: 280px;
+        height: 255px;
+        margin-top: -1px;
     }
     section.section04 li {
         background-size: contain !important;
         background-repeat: no-repeat;
+        /* height: 0px; */
     }
     .section07 {
-        margin-top: 110px;
+        margin-top: 85px;
     }
 }
 
 @media screen and (max-width: 375px) {
+    .section04 li p {
+    line-height: 1.4;
+    font-size: 13px;
+    letter-spacing: -1px;
+    padding: 0 20;
+}
+     .section03 .text li p {
+    padding-top: 125px;
+}
+    .section03 .image_box_left + .text {
+    padding-top: 0px;
+    margin-top: -25px;
+}
+    .section02 {
+    margin-top: 108px;
+    margin-bottom: 25px;
+    }
+    section.section-top-title-left {
+    padding-bottom: 75px;
+    }
     .section03 .image_box_left {
         height: 270px;
     }
@@ -598,6 +704,18 @@ section.board-link {
 
 
 @media screen and (max-width: 360px) {
+        .section04 li p {
+    line-height: 1.4;
+    font-size: 13px;
+    letter-spacing: -1px;
+}
+     .section03 .text li p {
+    padding-top: 125px;
+}
+    .section03 .image_box_left + .text {
+    padding-top: 0px;
+    margin-top: -25px;
+}
     .section03 .image_box_left {
         height: 250px;
     }
