--- a/src/main/webapp/css/implant/boneGraftImplant.css
+++ b/src/main/webapp/css/implant/boneGraftImplant.css
@@ -1,3 +1,9 @@
+.section02 .mobile {
+    display: none;
+}
+.section01 .section-title-color br {
+    display: none;
+}
 .section01 {
     margin-top: 107px;
 }
@@ -540,6 +546,12 @@ section.board-link {
 }
 
 @media screen and (max-width: 640px) {
+    .section02 .mobile {
+        display: block;
+    }
+    .section01 .section-title-color br {
+        display: block;
+    }
     .section03 {
         background-size: cover;
     }
