--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -96,7 +96,7 @@ header .mobile-sub-category .content {
     padding-top: 45px;
 }
 header .mobile-sub-category .logout-icon {
-    background: url(../images/cmmn/logout.png);
+    background: url(../images/cmmn/logout_1.png);
     width: 26px;
     height: 29px;
     display: inline-block;
@@ -109,7 +109,7 @@ header .mobile-sub-category .logout-icon {
 }
 
 header .mobile-sub-category .mypage-icon {
-    background: url(../images/cmmn/mypage.png);
+    background: url(../images/cmmn/mypage_1.png);
     width: 26px;
     height: 29px;
     display: inline-block;
@@ -300,7 +300,7 @@ div.category-footer > div {
     width: 160px;
 }
 .header-member a img {
-    width: 19px;
+    width: 20px;
 }
 header {
     position: fixed;
@@ -420,7 +420,7 @@ header .header-banner-slider-continer .bx-wrapper {
 }
 
 .login-nav img {
-    /* margin-top: 3px; */
+    margin-top: 3px;
     margin-bottom: 2px;
 }
 
