전체 임플란트 이미지 안 맞는 문제 수정

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -966,6 +966,7 @@ section.board-link ul li {
     .img-four .text li:before {
         width: 140px !important;
         height: 140px !important;
+        background-size: contain;
     }
     .section
     .img-four .text .img04 {
