전체임플란트 수정완료

--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -167,7 +167,7 @@
 
 .section04 .section-text {
     word-break: keep-all;
-    line-height: 1.6;
+    line-height: 1.52;
     position: relative;
     text-align: right;
 }
@@ -576,7 +576,7 @@
 }
 
 .table th {
-    height: 58px;
+    height: 53px;
     padding: 0;
     vertical-align: middle;
 }
@@ -584,7 +584,7 @@
 .table th.table-left {
     background: #8f8f8f;
     color: #fff;
-    font-size: 22px;
+    font-size: 19px;
 }
 
 .table th.table-middle {
@@ -640,6 +640,7 @@ section.board-link {
         height: 261px;
         word-break: keep-all;
         line-height: 1.1;
+        padding: 56px 0 0 30px;
     }
 }
 
@@ -649,9 +650,9 @@ section.board-link {
         margin-left: -203px;
     }
     .section07 ul {
-        padding: 0 30px;
+        /* padding: 0 30px; */
         box-sizing: border-box;
-        padding-top: 216px;
+        padding-top: 189px;
         height: auto;
         margin-left: 0;
     }
@@ -661,7 +662,7 @@ section.board-link {
     .section07 li {
         width: 100%;
         margin: 0;
-        margin-bottom: 100px;
+        margin-bottom: 55px;
     }
     .section04 {
         margin-top: 100px;
@@ -698,24 +699,93 @@ section.board-link {
 }
 
 @media screen and (max-width: 640px) {
+    section.board-link {
+    margin-top: 53px;
+}
+    .section07 li h2 {
+    font-size: 27px;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 22px;
+    letter-spacing: -2px;
+}
+    .section-title {
+    font-size: 28px;
+    line-height : 1.2;
+    }
+    .section07 {
+    margin-top: 50px;
+    /* padding-bottom: 104px; */
+}
+    
+.table th {
+    height: 45px;
+    padding: 0;
+    vertical-align: middle;
+}
+    
+    .table .table-left, .table .table-right {
+    font-size: 13px;
+    line-height: 1.4;
+    padding: 0 20px;
+}
+    section.table {
+    padding: 49px 25px;
+    box-sizing: border-box;
+    padding-bottom: 56px;
+}
+    .section06 .max-layout-width h2 {
+    text-align: center;
+    font-size: 28px;
+    margin-bottom: 30px;
+    letter-spacing: -2px;
+}
+    section.img-four p {
+    padding: 0 30px;
+    box-sizing: border-box;
+    word-break: keep-all;
+    padding: 122px 0 0;
+}
+
+    section.img-four li {
+    padding: 27px 0 0 !important;
+    height: 182px;
+    margin: 0 !important;
+}
+    .section05 .max-layout-width {
+    position: relative;
+    padding-top: 60px;
+    text-align: center;
+    color: #fff;
+}
+    .section04 .max-layout-width .text > div {
+    padding-right: 0px;
+    position: relative;
+}
     .section02 {
     margin-top: 135px;
     }
     .section05 {
         height: auto;
+        margin-top: 95px;
+        padding-bottom: 33px;
     }
     .section05 h2 {
-        font-size: 30px;
+        font-size: 28px;
+        margin-bottom: -105px;
     }
     .section05 p {
         font-size: 14px;
         word-break: keep-all;
         padding: 0 30px;
         box-sizing: border-box;
+        margin-bottom: 28px;
     }
     .section07 li h2 ~ p {
         word-break: keep-all;
         padding-right: 30px;
+        font-size: 14px;
+        margin-bottom: 9px;
     }
 }
 
@@ -726,6 +796,7 @@ section.board-link {
         background-size: contain;
         left: 10%;
         margin-left: 0;
+        /* margin-top: -28px; */
     }
     .section07 .section-title, .section07 .section-text {
         padding: 0 30px;
@@ -733,7 +804,7 @@ section.board-link {
         word-break: keep-all;
     }
     .section07 .section-text {
-        margin-top: 30px;
+        margin-top: 12px;
     }
 }
 
@@ -748,7 +819,7 @@ section.board-link {
         margin-top: 39px;
     }
     .section04 {
-        margin-top: 40px;
+        margin-top: 48px;
     }
     .section03 .text-box {
         padding-top: 249px;
@@ -766,16 +837,17 @@ section.board-link {
         height: 226px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 150px;
+        padding-top: 240px;
     }
     section.section-quotes-title-right .image_box_right {
         height: 220px;
     }
     .section04 .image_box_right .img {
-        background-size: contain !important;
+        background-size: cover !important;
     }
     .section02 .text-box h2 + p {
         word-break: keep-all;
+        margin-bottom: 46px;
     }
     .section02 .section-title {
         font-size: 30px;
@@ -790,13 +862,13 @@ section.board-link {
 
 @media screen and (max-width: 400px) {
     .section07 li {
-        height: auto;
+        /* height: auto; */
     }
 }
 
 @media screen and (max-width: 375px) {
     section.section-quotes-title-right .bg {
-        height: 246px;
+        height: 201px;
     }
     body .section-top-title-left .section-title {
         font-size: 26px;
